--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nuxt/http": "^0.6.4",
     "@nuxtjs/axios": "^5.13.1",
     "@nuxtjs/google-analytics": "^2.4.0",
+    "@nuxtjs/style-resources": "^1.0.0",
     "core-js": "^3.10.0",
     "node-sass": "^5.0.0",
     "nuxt": "^2.15.4",
